2008-10-14  Ales Hakl  <ales at hakl dot net>

	* src/hash.c (hash_t): only two types of hashtable (eqv? is not
	significantly useful and all usecases are covered by equal?)

	* src/bignum.c (logop): correct bitwise operations for bignums

2008-10-13  Ales Hakl  <ales at hakl dot net>

	* src/ports.c: ports for standard stdio streams

	* lib/inet.c (dfsch_inet_xml_escape): work with c strings (XML
	cannot contain NUL and strbuf magic is thus only added complexity)

	* src/ports.c (dfsch_port_write_cstr): direct output of c strings
	(for simple construction of callbacks)

2008-10-12  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (make_symbol): copy symbol name

2008-10-07  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_set_frame_context): fill in context fields in
	environment frame

	* src/types.h (struct environment_t): add fields for procedure and
	arguments

2008-09-30  Ales Hakl  <ales at hakl dot net>

	* dfsch/compiler.h: Removed unusable pseudocompiler

2008-09-29  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: Readable error messages

2008-09-29  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (dfsch_string_search_ci): case insensitive
	substring search

2008-09-28  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (dfsch_string_search): substring search function

2008-09-25  Ales Hakl  <ales at hakl dot net>

	* src/format.c (format_r): radix directive
	(dfsch_format): more directives (almost complete SRFI 48)

	* src/number.c (dfsch_number_to_string): support for different
	numeric bases

	* src/dfsch.c (dfsch_declare): API to declarations (other side is
	compiler, which is something that just might exist in future)

	* src/conditions.c (dfsch__conditions_register): handler-bind and
	restart-case special forms

2008-09-23  Ales Hakl  <ales at hakl dot net>

	* src/conditions.c (compute_restarts): compute-restarts function

2008-09-19  Ales Hakl  <ales at hakl dot net>
